New style for nav.group

--- a/examples/item.html
+++ b/examples/item.html
@@ -34,11 +34,16 @@
         </div>
         <nav class="column _6 offset_3 text normal right">
             <a href="#">
+
+                Logout</a>
+            <a href="#">
                 <img src="http://dribbble.s3.amazonaws.com/users/24447/avatars/small/chanporito.png?1352858686" class="avatar "/>
                 Profile</a>
         </nav>
     </div>
 </header>
+
+
 
 <div class="bck dark text color white padding_top padding_bottom">
     <div class="row">
@@ -55,6 +60,21 @@
         </div>
     </div>
 </div>
+
+
+<section class="bck light underline  ">
+    <div class="row text center normal">
+        <div class="column _12">
+            <nav class="group">
+                <a href="#" class="active"><span class="icon tablet"></span>Slides</a>
+                <a href="#"><span class="icon mobile"></span>Themes</a>
+                <a href="#"><span class="icon screen"></span>Applications</a>
+                <a href="#"><span class="icon cube"></span>Friends</a>
+                <a href="#"><span class="icon github"></span>Favorites</a>
+            </nav>
+        </div>
+    </div>
+</section>
 
 <section class="padding_top">
     <div class="row">
