Changes for dashboard (example)

--- a/examples/dashboard.html
+++ b/examples/dashboard.html
@@ -41,18 +41,25 @@
 
 
 <section class="bck dark text color white landinsg">
-    <div class="row">
+    <div class="row promotioned">
         <div class="column_6">
-
-            <h2>
-                Javi Jiménez
-
-            </h2>
-            <h5>http://tapquo.com</h5>
+            <img src="#" class="kinout preview" />
         </div>
 
         <div class="column_6">
-            sd
+            <h1 class="text bold">HTML5 Responsive Developer</h1>
+
+            <a href="#" class="author text normal display block">
+                <img src="http://tapquo.com/images/team-javi.jpg" class="float left avatar"/>Javier Jimenez
+            </a>
+
+            <p class="display block margin_bottom">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam ducimus dolore voluptatem accusamus expedita quod iste ad ipsum enim reiciendis quam nulla dolorum alias minus in. Dignissimos repudiandae ratione necessitatibus.
+            </p>
+            <div class="row text center ">
+                <a href="#" class="column_4 button">View Slidus</a>
+                <a href="#" class="column_2 button secondary">Share</a>
+            </div>
         </div>
     </div>
 </section>
@@ -77,94 +84,94 @@
             <h1 class="text color theme">
                 Popular
                 <nav class="float right">
-                    <a href="#" class="text bold big">View All</a>
+                    <a href="#" class="text big">View All</a>
                 </nav>
             </h1>
             <h3 class="text thin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus earum incidunt quis error vero quisquam ullam aut id dolore</h3>
          </div>
     </div>
 
-    <div class="row">
+    <div class="row text bold">
         <div class="column_3 thumb">
             <img src="#" class="preview" />
-            <a href="#" class="text bold">
+            <a href="#">
                 <img src="http://tapquo.com/images/team-javi.jpg" class="float left avatar"/>Alexander Novoselov
                 <div class="float right text normal ">128 views</div>
             </a>
         </div>
         <div class="column_3 thumb">
             <img src="#" class="preview" />
-            <a href="#" class="text bold">
+            <a href="#">
                 <img src="http://tapquo.com/images/team-javi.jpg" class="float left avatar"/>Alexander Novoselov
                 <div class="float right text normal ">128 views</div>
             </a>
         </div>
         <div class="column_3 thumb">
             <img src="#" class="preview" />
-            <a href="#" class="text bold">
+            <a href="#">
                 <img src="http://tapquo.com/images/team-javi.jpg" class="float left avatar"/>Alexander Novoselov
                 <div class="float right text normal ">128 views</div>
             </a>
         </div>
         <div class="column_3 thumb">
             <img src="#" class="preview" />
-            <a href="#" class="text bold">
+            <a href="#">
                 <img src="http://tapquo.com/images/team-javi.jpg" class="float left avatar"/>Alexander Novoselov
                 <div class="float right text normal ">128 views</div>
             </a>
         </div>
         <div class="column_3 thumb">
             <img src="#" class="preview" />
-            <a href="#" class="text bold">
+            <a href="#">
                 <img src="http://tapquo.com/images/team-javi.jpg" class="float left avatar"/>Alexander Novoselov
                 <div class="float right text normal ">128 views</div>
             </a>
         </div>
         <div class="column_3 thumb">
             <img src="#" class="preview" />
-            <a href="#" class="text bold">
+            <a href="#">
                 <img src="http://tapquo.com/images/team-javi.jpg" class="float left avatar"/>Alexander Novoselov
                 <div class="float right text normal ">128 views</div>
             </a>
         </div>
         <div class="column_3 thumb">
             <img src="#" class="preview" />
-            <a href="#" class="text bold">
+            <a href="#">
                 <img src="http://tapquo.com/images/team-javi.jpg" class="float left avatar"/>Alexander Novoselov
                 <div class="float right text normal ">128 views</div>
             </a>
         </div>
         <div class="column_3 thumb">
             <img src="#" class="preview" />
-            <a href="#" class="text bold">
+            <a href="#">
                 <img src="http://tapquo.com/images/team-javi.jpg" class="float left avatar"/>Alexander Novoselov
                 <div class="float right text normal ">128 views</div>
             </a>
         </div>
                 <div class="column_3 thumb">
             <img src="#" class="preview" />
-            <a href="#" class="text bold">
+            <a href="#">
                 <img src="http://tapquo.com/images/team-javi.jpg" class="float left avatar"/>Alexander Novoselov
                 <div class="float right text normal ">128 views</div>
             </a>
         </div>
         <div class="column_3 thumb">
             <img src="#" class="preview" />
-            <a href="#" class="text bold">
+            <a href="#">
                 <img src="http://tapquo.com/images/team-javi.jpg" class="float left avatar"/>Alexander Novoselov
                 <div class="float right text normal ">128 views</div>
             </a>
         </div>
         <div class="column_3 thumb">
             <img src="#" class="preview" />
-            <a href="#" class="text bold">
+            <a href="#">
                 <img src="http://tapquo.com/images/team-javi.jpg" class="float left avatar"/>Alexander Novoselov
                 <div class="float right text normal ">128 views</div>
             </a>
         </div>
         <div class="column_3 thumb">
             <img src="#" class="preview" />
-            <a href="#" class="text bold">
+            <a href="#">
                 <img src="http://tapquo.com/images/team-javi.jpg" class="float left avatar"/>Alexander Novoselov
                 <div class="float right text normal ">128 views</div>
             </a>
@@ -173,61 +180,58 @@
 </section>
 
 <section class="bck light">
-    <div class="row">
-        <div class="column_4 bck lightest padding avatars">
-            <h4 class="text normal">Last Users</h4>
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" /
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
-            <img src="http://tapquo.com/images/team-javi.jpg" />
+    <div class="row last">
+        <div class="column_6">
+            <h5>Last Users</h5>
+            <img class="avatar border" src="http://tapquo.com/images/team-javi.jpg"  />
+            <img class="avatar border" src="http://tapquo.com/images/team-manrique.jpg" />
+            <img class="avatar border" src="http://tapquo.com/images/team-aitor.jpg" />
+            <img class="avatar border" src="http://tapquo.com/images/team-ina.jpg" />
+            <img class="avatar border" src="http://tapquo.com/images/team-cata.jpg" />
+            <img class="avatar border" src="http://tapquo.com/images/team-oihane.jpg" />
+            <img class="avatar border" src="http://tapquo.com/images/team-mikel.jpg" />
+            <img class="avatar border" src="http://tapquo.com/images/team-janire.jpg" />
+            <img class="avatar border" src="http://tapquo.com/images/team-inigo.jpg" />
+            <img class="avatar border" src="http://tapquo.com/images/team-josu.jpg" />
+            <img class="avatar border" src="http://tapquo.com/images/team-iratxe.jpg" />
+            <img class="avatar border" src="http://tapquo.com/images/team-aritz.jpg" />
         </div>
-        <div class="column_4 padding">
-            <h4 class="text normal">Last Themes</h4>
+        <div class="column_3">
+            <h5>Last Themes</h5>
+            <ul class="list_avatar none">
+                <li>
+                    <img src="http://tapquo.com/images/team-javi.jpg" class="float left avatar"/>
+                    <a href="#">
+                        <span class="text normal">Ilusiona</span>
+                        <div class="float right text small">128 purchases</div>
+                    </a>
+                    <br/>
+                    <div class="text small">by <a href="#" >Javi Jimenez</a></div>
+                </li>
+                <li>
+                    <img src="http://tapquo.com/images/team-janire.jpg" class="float left avatar"/>
+                    <a href="#">
+                        <span class="text normal">Pink, Pink, Pinkie</span>
+                        <div class="float right text small">128 purchases</div>
+                    </a>
+                    <br/>
+                    <div class="text small">by <a href="#" >Janire Noguerol</a></div>
+                </li>
+            </ul>
         </div>
-        <div class="column_4 padding">
-            <h4 class="text normal">Last Applications</h4>
+        <div class="column_3">
+            <h5>Last Applications</h5>
+            <ul class="list_avatar none">
+                <li>
+                    <img src="http://tapquo.com/images/team-javi.jpg" class="float left avatar"/>
+                    <a href="#">
+                        <span class="text normal">Ilusiona</span>
+                        <div class="float right text small">128 purchases</div>
+                    </a>
+                    <br/>
+                    <div class="text small">by <a href="#" >Javi Jimenez</a></div>
+                </li>
+            </ul>
         </div>
     </div>
 </section>
