--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         </div>
 
         <div class="column_3">
-            <h4>Round Bullets</h4>
+            <h4>Circle Bullets</h4>
             <ul class="circle">
                 <li>Cras mattis consectetur purus sit amet fermentum.</li>
                 <li>
