--- a/examples/dashboard.html
+++ b/examples/dashboard.html
@@ -57,7 +57,7 @@
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam ducimus dolore voluptatem accusamus expedita quod iste ad ipsum enim reiciendis quam nulla dolorum alias minus in. Dignissimos repudiandae ratione necessitatibus.
             </p>
             <div class="row text center ">
-                <a href="#" class="column_4 button">View Slidus</a>
+                <a href="item.html" class="column_4 button">View item</a>
                 <a href="#" class="column_2 button secondary">Share</a>
             </div>
         </div>
@@ -68,12 +68,20 @@
     <div class="row text center normal">
         <div class="column_12">
             <nav class="group">
-                <a href="#" class="active"><span class="icon tablet"></span>Popular</a>
-                <a href="#"><span class="icon mobile"></span>Themes</a>
-                <a href="#"><span class="icon screen"></span>Applications</a>
-                <a href="#"><span class="icon cube"></span>Friends</a>
-                <a href="#"><span class="icon github"></span>Favorites</a>
+                <a href="#" class="active"><span class="icon cube"></span>Popular</a>
+                <a href="#"><span class="icon cube"></span>Themes</a>
+                <a href="#"><span class="icon cube"></span>Applications</a>
+                <a href="#"><span class="icon cube"></span>Following</a>
+                <a href="#"><span class="icon cube"></span>Debuts</a>
             </nav>
+        </div>
+    </div>
+</section>
+
+<section class="underline">
+    <div class="row form search">
+        <div class="column_12">
+            <input type="text" placeholder="Search" class="big text thin" />
         </div>
     </div>
 </section>
