--- a/examples/item.html
+++ b/examples/item.html
@@ -33,11 +33,9 @@
             <a href="http://tuktuk.tapquo.com" class="logo text normal color white">tuk<span class="text book">tuk</span></a>
         </div>
         <nav class="column_6 offset_3 text normal right">
+            <a href="#">Logout</a>
             <a href="#">
-
-                Logout</a>
-            <a href="#">
-                <img src="http://dribbble.s3.amazonaws.com/users/24447/avatars/small/chanporito.png?1352858686" class="avatar "/>
+                <img src="http://tapquo.com/images/team-javi.jpg" class="avatar "/>
                 Profile</a>
         </nav>
     </div>
