--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <link rel="stylesheet" href="stylesheets/css/tuktuk.theme.css">
 </head>
 
-
 <body>
 <!-- ========================== HEADER ========================== -->
 <header class="bck darkest text color white">
@@ -31,8 +30,8 @@
             <a href="http://tuktuk.tapquo.com" class="logo text normal color white">tuk<span class="text book">tuk</span></a>
         </div>
         <nav class="column_6 offset_3 text normal right">
-            <a href="#"><span class="icon twitter"></span>Tweet me</a>
-            <a href="#" class="button small">Download</a>
+            <a href="#"><span class="icon twitter"></span>Share</a>
+            <a href="#" class="button small"><span class="icon download"></span>Download</a>
         </nav>
     </div>
 </header>
@@ -45,12 +44,12 @@
             <h1 class="text normal">tuk<span class="text thin">tuk</span></h1>
 
             <h3 class="margin bottom">This is not another front-end framework ... is a way to create sites and extend them with <span class="text normal">your own style</span>.</h3>
-            <a href="#" class="button large margin bottom">Download tuktuk</a>
+            <a href="#" class="button large margin bottom"><span class="icon download"></span>Download tuktuk</a>
 
             <nav class=>
                 <a href="https://github.com/soyjavi/tuktuk" target="_blank" class="margin_right text color white">GitHub Project</a>
                 <a href="examples/" class="margin_right text color white">Examples</a>
-                <span>Version 0.1.0</span>
+                <span>Version 0.2.0</span>
             </nav>
         </div>
     </div>
@@ -190,8 +189,8 @@
               <a href="#" class="button large">Large</a>
               <a href="#" class="button ">Normal</a>
               <a href="#" class="button secondary">Secondary</a>
-              <a href="#" class="button accept">accept</a>
-              <a href="#" class="button cancel">cancel</a>
+              <a href="#" class="button accept">Accept</a>
+              <a href="#" class="button cancel">Cancel</a>
               <a href="#" class="button small">Small</a>
               <a href="#" class="button tiny">Tiny</a>
           </div>
@@ -201,16 +200,16 @@
     </div>
     <div class="row">
         <div class="column_8 ">
-              <a href="#" class="button large"><span class="icon html5"></span>Large</a>
-              <a href="#" class="button "><span class="icon css3"></span>Normal</a>
-              <a href="#" class="button secondary"><span class="icon safari"></span>Secondary</a>
-              <a href="#" class="button accept"><span class="icon checkmark"></span>accept</a>
-              <a href="#" class="button cancel"><span class="icon cancel"></span>cancel</a>
-              <a href="#" class="button small"><span class="icon chrome"></span>Small</a>
-              <a href="#" class="button tiny"><span class="icon firefox"></span>Tiny</a>
+              <a href="#" class="button large"><span class="icon twitter"></span>Large</a>
+              <a href="#" class="button "><span class="icon facebook"></span>Normal</a>
+              <a href="#" class="button secondary"><span class="icon dribbble"></span>Secondary</a>
+              <a href="#" class="button accept"><span class="icon accept"></span>Accept</a>
+              <a href="#" class="button cancel"><span class="icon cancel"></span>Cancel</a>
+              <a href="#" class="button small"><span class="icon wordpress"></span>Small</a>
+              <a href="#" class="button tiny"><span class="icon github"></span>Tiny</a>
           </div>
         <div class="column_4">
-            <a href="#" class="button anchor margin_top"><span class="icon checkmark"></span>Anchor</a>
+            <a href="#" class="button anchor margin_top"><span class="icon accept"></span>Anchor</a>
         </div>
     </div>
 </section>
@@ -343,7 +342,7 @@
                             <input type="checkbox" name="radio2" /><span>Two</span>
                         </fieldset>
 
-                        <button class="accept margin_right"><span class="icon mail"></span>Send</button>
+                        <button class="accept margin_right"><span class="icon accept"></span>Send</button>
                         <button class="cancel"><span class="icon cancel"></span>Cancel</button>
                     </form>
                 </div>
@@ -530,7 +529,10 @@
             <h3>
                 <a href="#" class="icon twitter"></a>
                 <a href="#" class="icon facebook"></a>
-                <a href="#" class="icon google-plus"></a>
+                <a href="#" class="icon dribbble"></a>
+                <a href="#" class="icon wordpress"></a>
+                <a href="#" class="icon github"></a>
+
             </h3>
         </div>
     </div>
