Changes in navigation

--- a/index.html
+++ b/index.html
@@ -44,12 +44,11 @@
             <h1 class="text normal">tuk<span class="text thin">tuk</span></h1>
 
             <h3 class="margin bottom">This is not another front-end framework ... is a way to create sites and extend them with <span class="text normal">your own style</span>.</h3>
-            <a href="#" class="button large margin bottom"><span class="icon download"></span>Download tuktuk</a>
+            <a href="#" class="button large margin bottom"><span class="icon download"></span>Download <span class="text bold">tuk</span><span class="text normal">tuk</span> now!</a>
 
             <nav class=>
-                <a href="https://github.com/soyjavi/tuktuk" target="_blank" class="margin_right text color white">GitHub Project</a>
-                <a href="examples/" class="margin_right text color white">Examples</a>
-                <span>Version 0.2.0</span>
+                <a href="https://github.com/soyjavi/tuktuk" target="_blank" class="margin_right text color white"><span class="icon github"></span>GitHub Project</a>
+                <a href="http://tuktuk.tapquo.com/examples/" class="margin_right text color white"><span class="icon cube"></span>Examples version 0.2</a>
             </nav>
         </div>
     </div>
